--- a/index-react.html
+++ b/index-react.html
@@ -11,12 +11,65 @@
     <div id="root"></div>
 
     <script type="text/babel">
-
+      let turtleArray = [
+        {
+          id: 1,
+          imgURL: "https://images.csmonitor.com/csm/2017/10/1005-SeaTurtle.jpg?alias=standard_900x600",
+          name: "Jasper",
+          age: "1",
+          color: "purple"
+        },
+        {
+          id: 2,
+          imgURL: "https://www.phnompenhpost.com/sites/default/files/styles/image_780x440/public/field/image/the-asian-giant-softshell-turtle-was-thought-to-be-extinct-in-the-kratie-area-until-the-species-was-rediscovered-in-2007.-wildlife-conservation-society.jpg?itok=-KskbJ9t",
+          name: "Smee",
+          age: "16",
+          color: "black"
+        },
+        {
+          id: 3,
+          imgURL: "https://www.mass.gov/files/styles/embedded_half_width/public/eastern_box_turtle_mike_jones_4_0.jpg?itok=AZwlbbLz",
+          name: "Drogo",
+          age: "28",
+          color: "yellow"
+        },
+        {
+          id: 4,
+          imgURL: "https://static01.nyt.com/images/2018/04/21/science/21OBS-Quote-INYT/13TURTLE-articleLarge.jpg?quality=75&auto=webp&disable=upscale",
+          name: "The Dude",
+          age: "24",
+          color: "blue"
+        }
+      ]
       // Write your component here!!
+      function Turtle(props){
+        let {name, imgURL, id, age, color} = props
+        return (
+          <div className="card" id={id}>
+            <img src={imgURL} alt={name}/>
+            <h2>Name: {name}</h2>
+            <h4>Age: {age}</h4>
+            <h4>Color: {color}</h4>
+          </div>
+        )
+      }
 
       ReactDOM.render(
         <div className="card-container">
-          <div className="card" id="1">
+          {turtleArray.map((turtle, i) => <Turtle key={i} {...turtle }  />)}
+        </div>, 
+        document.getElementById('root')
+      )
+
+    </script>
+  </body>
+</html>
+
+
+
+
+
+<!-- <div className="card" id="1">
             <img src="https://images.csmonitor.com/csm/2017/10/1005-SeaTurtle.jpg?alias=standard_900x600" alt="Jasper"/>
             <h2>Name: Jasper</h2>
             <h4>Age: 1</h4>
@@ -35,16 +88,4 @@
             <img src="https://static01.nyt.com/images/2018/04/21/science/21OBS-Quote-INYT/13TURTLE-articleLarge.jpg?quality=75&auto=webp&disable=upscale" alt="The Dude"/>
             <h2>Name: The Dude</h2>
             <h4>Age: 24</h4>
-          </div>
-        </div>, 
-        document.getElementById('root')
-      )
-
-    </script>
-  </body>
-</html>
-
-
-
-
-
+          </div> -->
